Update add_media, add rename_album
